--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "homepage": "https://shaunieboy31/todo-list",
+
+  "homepage": "https://github.com/shaunieboy31/repo-todo",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build"
   },
   "name": "react-todo",
   "version": "0.1.0",
@@ -14,7 +17,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
     "autoprefixer": "^10.4.21",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1"
   }
